validating linked jobis as 0